--- a/.github/workflows/image_pipeline.yml
+++ b/.github/workflows/image_pipeline.yml
@@ -120,7 +120,7 @@ jobs:
           with:
               upload_url: ${{ steps.create_release.outputs.upload_url }}
               asset_path: ./raspbian-cli/raspbian-cli.img.gz
-              asset_name: raspbian-cli
+              asset_name: raspbian-cli.img.gz
               asset_content_type: application/zip
 
         - name: upload GUI image
@@ -130,7 +130,7 @@ jobs:
           with:
               upload_url: ${{ steps.create_release.outputs.upload_url }}
               asset_path: ./raspbian-gui/raspbian-gui.img.gz
-              asset_name: raspbian-gui
+              asset_name: raspbian-gui.img.gz
               asset_content_type: application/zip
         
 
