--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,14 +6,13 @@ LABEL repo="https://github.com/jrrombaldo/img-bakery.git"
 
 
 ENV IMG_URL=https://downloads.raspberrypi.org/raspbian_lite_latest
-ENV IMG_NAME=img-bakery
 ENV MOUNT=/mnt/custom-img
 ENV INCREASE_BY=5G
 
 
 RUN \
     apt clean  && apt update \
-    && apt install qemu qemu-user-static binfmt-support dosfstools parted wget zip udev grep file gettext-base -y \
+    && apt install qemu qemu-user-static binfmt-support dosfstools parted wget xz-utils unzip zip udev grep file gettext-base -y \
     &&  wget https://raw.githubusercontent.com/Drewsif/PiShrink/master/pishrink.sh --output-document=/usr/local/bin/pishrink.sh
 
 COPY entrypoint.sh /usr/local/bin/
@@ -23,4 +22,3 @@ VOLUME /transit
 VOLUME /result
 
 CMD entrypoint.sh
-
