fixing docker file

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -12,7 +12,7 @@ ENV INCREASE_BY=5G
 
 RUN \
     apt clean  && apt update \
-    && apt install qemu qemu-user-static binfmt-support dosfstools parted wget xz-utils unzip zip udev grep file gettext-base -y \
+    && apt install qemu qemu-user-static binfmt-support dosfstools parted wget xz-utils unzip zip udev grep file gettext-base -y 
     # &&  wget https://raw.githubusercontent.com/Drewsif/PiShrink/master/pishrink.sh --output-document=/usr/local/bin/pishrink.sh
 
 COPY entrypoint.sh /usr/local/bin/
